// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkScrim render should render correctly 1`] = `
<div
  className="bpk-scrim-content "
>
  <div
    className="bpk-scrim"
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  />
  <TestComponent
    closeOnScrimClick={true}
    dialogRef={[Function]}
    isIphone={false}
    onClose={[Function]}
  />
</div>
`;

exports[`BpkScrim render should render correctly when is iPhone 1`] = `
<div
  className="bpk-scrim-content bpk-scrim-content--iphone-fix "
>
  <div
    className="bpk-scrim"
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  />
  <TestComponent
    closeOnScrimClick={true}
    dialogRef={[Function]}
    isIphone={true}
    onClose={[Function]}
  />
</div>
`;

exports[`BpkScrim render should render correctly with containerClassName 1`] = `
<div
  className="bpk-scrim-content containerClassName"
>
  <div
    className="bpk-scrim"
    onMouseDown={[Function]}
    onTouchStart={[Function]}
  />
  <TestComponent
    closeOnScrimClick={true}
    dialogRef={[Function]}
    isIphone={false}
    onClose={[Function]}
  />
</div>
`;
